# sparse-vggt

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
src/sparse_vggt/: __init__.py
src/sparse_vggt/models/: __init__.py  attention.py  pi3.py  utils.py  vggt.py
src/sparse_vggt/utils/: hilbert.py  sparse_wrapper.py  tokens.py
static/assets/pi3/: playground-mask.glb
static/assets/pi3_ratio0.5_cdf0.7_sparsity0.48/: playground-mask.glb
static/assets/pi3_ratio0.8_cdf0.5_sparsity0.74/: playground-mask.glb
static/css/: index.css  model-viewer.css  table.css
static/js/: copy-bibtex.js  index.js
