[project]
name = "sparse-vggt"
version = "0.1.0"
description = "Official implementation of Faster VGGt with Block-Sparse Global Attention"
readme = "README.md"
authors = [
    { name = "Brian Wang", email = "brianwang00001@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "vggt",
    "einops>=0.8.1",
    "huggingface-hub>=0.34.4",
    "ninja>=1.13.0",
    "pillow>=10.3.0",
    "safetensors>=0.6.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "numpy==1.26.4",
    "plyfile>=1.1.2",
    "ipykernel>=6.30.1",
]

[tool.uv.sources]
vggt = { path = "external/vggt", editable = true }

[tool.uv]
dev-dependencies = ["ruff", "pre-commit"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["external"]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
